# dotfiles

./: .gitignore  README.md  bootstrap.sh  install.sh
bash/: bash_profile  bashrc  (+4 more)
targets/kiro/skills/curator/scripts/curator/: __main__.py  builders.py  config.py  prompts.py  pyproject.toml  quintet.py  quintet.yaml  render_context.py  report.py  runtime.py  security.py  source.py  stages.py  utils.py  vault.py
targets/kiro/skills/curator/scripts/curator/curator/: __init__.py  plan.py  predicates.py  quintet.yaml  runtime.py  utils.py
targets/kiro/skills/curator/scripts/curator/curator/source/: config.py  pipeline.py
targets/kiro/skills/curator/scripts/curator/curator/vault/: __init__.py  cli.py  config.py  replica.py
targets/kiro/skills/curator/scripts/curator/source/: cli.py  config.py  pipeline.py
targets/kiro/skills/curator/scripts/curator/source/handlers/: __init__.py  pdf.py  youtube.py
targets/kiro/skills/curator/scripts/curator/tests/: conftest.py  test_cli.py  test_cli_next.py  test_gate_list.py  test_orphan_links.py  test_pipeline_dispatch.py  test_plan.py  test_predicates.py  test_prune.py  test_recipe_conversion.py  test_render_context.py  test_replica.py  test_replica_merge.py  test_replica_recipes.py  test_runner.py  test_runtime.py  test_schemas.py  test_strip_dead_links.py  test_template_audit.py
targets/kiro/skills/curator/scripts/curator/vault/: cli.py  config.py  replica.py
targets/kiro/skills/curator/scripts/disk/: __main__.py  builders.py  config.py  prompts.py  pyproject.toml  verdicts.py  workdir.py
targets/kiro/skills/curator/scripts/disk/schemas/: composed.schema.json  context.schema.json  fetch-envelope.schema.json  items.schema.json  plan.schema.json  report-vars.schema.json  sources.schema.json  summary.schema.json  verdict.schema.json
targets/kiro/skills/curator/scripts/disk/templates/: composer-prompt.j2  extractor-prompt.j2  judge-prompt.j2  page-anatomy-keyword.j2  page-anatomy-model.j2  page-anatomy-person.j2  page-anatomy-synthesis.j2  report.md.j2
targets/kiro/skills/curator/scripts/engine/: __init__.py  __main__.py  algorithm.py  config.py  context.py  convert.py  fetch.py  git_ops.py  lint.py  models.py  pages.py  pyproject.toml  runner.py  store.py  utils.py  validate.py  vault.py  workdir.py
targets/kiro/skills/curator/scripts/engine/handlers/: html.py  local.py  pdf.py  youtube.py
targets/kiro/skills/curator/scripts/engine/schemas/: approved.schema.json  composed.schema.json
targets/kiro/skills/curator/scripts/source/: __main__.py  config.py  content_types.py  convert.py  errors.py  fetch.py  pyproject.toml
targets/kiro/skills/curator/scripts/source/handlers/: __init__.py  html.py  local.py  pdf.py  youtube.py
targets/kiro/skills/dojo/scripts/dojo/: pyproject.toml
targets/kiro/skills/dojo/scripts/dojo/dojo/: __init__.py  __main__.py  locate.py  pipeline.py  plan.py  report.py  runtime.py  status.py  utils.py
targets/kiro/skills/dojo/scripts/dojo/dojo/autochecks/: __init__.py  _helpers.py  authoring.py  checks.py  interface_conventions.py  reference_conventions.py  script_conventions.py  tool_conventions.py  workflow_conventions.py
targets/kiro/skills/dojo/scripts/dojo/dojo/checks/: __init__.py  check_prompts.py
targets/kiro/skills/dojo/scripts/dojo/dojo/lint/: __init__.py  checks.py  runner.py
targets/kiro/skills/dojo/scripts/dojo/dojo/tasks/: __init__.py  check_location.py  check_name.py  check_naming.py  check_overlaps.py  find_skill.py  render_design.py  render_design_update.py  summary.py
targets/kiro/skills/dojo/scripts/dojo/dojo/validators/: __init__.py  validate.py
targets/kiro/skills/loom/scripts/loom/: pyproject.toml
targets/kiro/skills/loom/scripts/loom/loom/: __init__.py  __main__.py  _lifecycle.py  builders.py  errors.py  plan.py
targets/kiro/skills/loom/scripts/loom/loom/engine/: __init__.py  algorithm.py  loops.py  models.py  resolve.py  runner.py  store.py
targets/kiro/skills/loom/scripts/loom/loom/render/: __init__.py  jinja.py
targets/kiro/skills/loom/scripts/loom/loom/validate/: __init__.py  dag.py  loops.py  references.py  schemas.py
targets/kiro/skills/loom/scripts/loom/loom/visualise/: __init__.py  glyphs.py  layout.py  render.py
targets/kiro/skills/loom/scripts/loom/tests/: conftest.py  helpers.py  test_algorithm.py  test_depends_on.py  test_e2e_extend.py  test_e2e_linear.py  test_e2e_predicates.py  test_extend.py  test_init.py  test_loops.py  test_models.py  test_plan_builder.py  test_predicates.py  test_render.py  test_resolve.py  test_resume.py  test_runtime.py  test_schema_validation.py  test_store.py  test_tool_dispatch.py  test_validate_dag.py  test_validate_integration.py  test_validate_references.py  test_validate_schemas.py  test_visualise_glyphs.py  test_visualise_layout.py  test_visualise_render.py  test_visualise_snapshot.py
targets/kiro/skills/loom/scripts/loom/tests/fixtures/: curator-plan.yaml  curator-snapshot-ascii.txt  curator-snapshot-default.txt  (+1 more)
targets/kiro/skills/secure-llm/scripts/security_scan/: __init__.py  __main__.py  pyproject.toml
(+689 files in other folders)
