[project]
name = "curator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "typer>=0.12",
    "jsonschema>=4.23",
    "jmespath>=1.0",
    "jinja2>=3.1",
    "mdformat>=0.7",
    "mdformat-gfm>=0.3",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pypdf>=4.3",
    "yt-dlp>=2024.8.6",
    "arxiv>=2.1",
    "webvtt-py>=0.5",
    "gdown>=5.2",
    "loom",
]

[tool.uv.sources]
loom = { path = "../../../loom/scripts/loom", editable = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curator"]
include = ["templates/**"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
