[project]
name = "disk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "typer>=0.12",
    "vault",
]

[tool.uv.sources]
vault = { path = "../vault", editable = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["disk"]
