[project]
name = "curator-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pypdf>=4.3",
    "yt-dlp>=2024.8.6",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "jsonschema>=4.23",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
