[project]
name = "source"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pypdf>=4.3",
    "yt-dlp>=2024.8.6",
    "python-slugify>=8.0",
    "pyyaml>=6.0",
    "arxiv>=2.1",
    "webvtt-py>=0.5",
    "jsonschema>=4.23",
    "vault",
]

[tool.uv.sources]
vault = { path = "../vault", editable = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]
