[project]
name = "dojo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "jsonschema>=4.23",
    "jinja2>=3.1",
    "loom",
    "mdformat>=1.0.0",
]

[tool.uv.sources]
loom = { path = "../../../loom/scripts/loom", editable = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dojo"]
include = ["templates/**", "schemas/**"]
