[project]
name = "loom-loom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "jmespath>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]
