[project]
name = "curator-security-scan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["security_scan"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
